Fix hero image not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ body {
     
     .hero {
         background: url("/assets/images/home-page/jerseys.jpg");
+        size: center;
     }
 
     .topnav a:hover {
@@ -89,23 +90,23 @@ body {
     }
 
     .roster {
-        margin-left: 10px;
+        margin-left: 45px;
     }
 
- 
+
+    
 
 /*----------------------EXTRA MOBILE STYLING ABOVE---------------------*/
     
 
 
-
 .hero {
     width: 100%;
     height: 600px;
-    background: url('../assets/images/home-page/jerseys.jpg')
-    no-repeat
-    center center
-    / cover;
+    background-image: url('../images/home-page/jerseys.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     position: relative;
     margin: 20px auto;
     display: block;
@@ -129,6 +130,7 @@ body {
 
 #latest {
 text-transform: uppercase;
+text-decoration: underline;
 width: 100%;
 text-align: center;
 font-size: 25px;
@@ -138,7 +140,7 @@ font-size: 25px;
 width: 60%;
 margin: 40px auto;
 text-align: center;
-text-decoration: underline;
+/* text-decoration: underline; */
 }
 
 .index-image {
